fix: dont show item list "hover" indicator on mobile

--- a/packages/web/src/stylesheets/_items-column.scss
+++ b/packages/web/src/stylesheets/_items-column.scss
@@ -112,9 +112,14 @@
   }
 
   .content-list-item {
-    &.selected,
-    &:hover {
+    &.selected {
       background-color: var(--item-cell-selected-background-color);
+    }
+
+    @media screen and (hover: hover) {
+      &:hover {
+        background-color: var(--item-cell-selected-background-color);
+      }
     }
 
     ul {
